[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Lily.gd" type="Script" id=1]
[ext_resource path="res://assets/speech_bubble.png" type="Texture" id=2]
[ext_resource path="res://assets/idle1.png" type="Texture" id=3]
[ext_resource path="res://assets/idle2.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow_left.png" type="Texture" id=5]
[ext_resource path="res://assets/arrow_right.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.3
} ]

[node name="Lily" type="Node2D"]

script = ExtResource( 1 )

[node name="SpeechBubble" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 80, -50 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Transform" ]

[node name="ArrowLeft" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 55, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ArrowRight" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( -60, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]


